Add ImageKit authentication and GitHub/Google providers to NextAuth

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imagekit/next": "^2.1.2",
     "@types/bcrypt": "^5.0.2",
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.15.2",
